fix text overflow problem

--- a/homepage/assets/css/demo.css
+++ b/homepage/assets/css/demo.css
@@ -413,7 +413,7 @@ font-face
 }
 
 .words{
-    font-size: 48px;
+    font-size: 3em;
     color: rgba(238,238,238,0.8);
     font-family:"Source Han Sans CN","Pingfang","MicrosoftJhengHei",STHeiti,MingLiu;
     font-family:"product_sansregular","Helvetica Neue",Arial,Sans-Serif;
